[package]
name = "lockedbox"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/khonsulabs/lockedbox"
keywords = ["memory", "mlock", "no-std"]
categories = ["encodingmemory-management"]
rust-version = "1.56.1"

[dependencies]
memsec = "0.6.3"
